加入session
Signed-off-by: zhu4ce4 <zhu4ce4@163.com>